PTY pseudo-terminal support (Linux): The server now launches via PTY, allowing JLine to detect a real terminal and enable full features (tab completion, command history, colored output) instead of falling back to dumb terminal mode Added utility function library: print_banner(), confirm_action(), log_and_print(), safe_rmtree(), _unlock_with_logging()
Fixed --new crashing in fresh environments when load_config() triggered sys.exit() (not caught by except Exception)
Fixed JLine input echo not displaying in PTY mode (stdin now inherited directly from the real terminal)
Fixed PTY mode setsid causing the server process to detach from the terminal session and lose input

Output filtering: Silenced JOML sun.misc.Unsafe deprecation warnings (4 startup lines)
Output filtering: Silenced Using incubator modules: jdk.incubator.vector warning (removed --add-modules flag)
Output filtering: Silenced Advanced terminal features are not available warning in pipe mode
Crash analysis: Excluded Unknown or incomplete command messages (user typos causing false positives)
Crash analysis: Standardized "Unknown" / "unknown" default value casing
UI consistency: Added consistent leading space to all numbered list items

Removed dead code: import errno (0 refs), import tty (0 refs), hasattr(shutil, 'copytree') Python 3.8 compatibility workaround (2 sites)
Consolidated 8 inline import traceback statements into top-level import
_unlock_with_logging() replaced 7 duplicated finally: remove_lock() blocks
safe_rmtree() globally replaced shutil.rmtree(path, ignore_errors=True)
_list_remote_versions() extracted from download_version()
_run_server_pty() and _run_server_pipe() extracted from start_server() (220 → 55 lines)

load_config() now caches results based on file mtime (up to 5× fewer reads per invocation)
check_logs_for_errors() uses deque(maxlen=200) instead of readlines() (prevents OOM on large log files)
get_device_id() skips Android getprop subprocess calls on non-Android systems